# jack-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  SPEC.md
adapters/: README.md  cli_voice.py
jack-voice/: Cargo.toml
jack-voice-bridge/: Cargo.toml  README.md
jack-voice-bridge/scripts/: smoke_test.py
jack-voice-bridge/src/: audio.rs  main.rs  protocol.rs
jack-voice-bridge/tests/: runtime_hello_integration.rs
jack-voice/src/: audio.rs  audio_quality.rs  calibration.rs  kokoro_tts.rs  lib.rs  models.rs  parakeet_stt.rs  pipeline.rs  speaker.rs  stt.rs  tts.rs  turn_detector.rs  vad.rs  watchdog.rs
jack-voice/tests/: pocket_models_integration.rs  pocket_pipeline_defaults.rs
scripts/: install_cli_adapters.py  install_cli_adapters.sh  verify_local.sh
sdk/python/jack_voice_sdk/: README.md  pyproject.toml
sdk/python/jack_voice_sdk/examples/: basic.py
sdk/python/jack_voice_sdk/jack_voice_sdk/: __init__.py  client.py
sdk/ts/jack-voice-sdk-ts/: README.md  package.json  tsconfig.json
sdk/ts/jack-voice-sdk-ts/src/: index.ts
supertonic/: Cargo.toml
supertonic/src/: lib.rs  phonemizer.rs  voice_style.rs
