[package]
name = "jack-voice-bridge"
version.workspace = true
edition.workspace = true
description = "NDJSON stdio bridge for jack-voice"

[dependencies]
base64 = "0.22"
jack-voice = { path = "../jack-voice" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
