[package]
name = "jack-voice"
version.workspace = true
edition.workspace = true
description = "Production-quality voice pipeline: VAD, STT, TTS, turn detection, audio capture/playback"

[dependencies]
# Supertonic TTS (workspace crate)
supertonic = { path = "../supertonic" }

# Audio capture/playback
cpal = "0.15"
rodio = "0.19"

# Voice pipeline (sherpa-rs for VAD + Whisper/Moonshine STT)
sherpa-rs = { version = "0.6", default-features = false }

# Kokoro TTS (multilingual)
kokoro-tiny = { version = "0.1.0", default-features = false, features = ["playback"] }

# Parakeet STT (multilingual)
parakeet-rs = { version = "0.3", default-features = false }

# ONNX Runtime for Smart Turn v3 + Supertonic
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "cuda"] }

# Audio processing
hound = "3.5"
rubato = "0.15"

# N-dimensional arrays for ML tensors
ndarray = "0.16"
ndarray-npy = "0.9.1"

# Archive extraction for model downloads
bzip2 = "0.5"
tar = "0.4"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"

# Cross-platform paths
dirs = "5"

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

# Lazy static
lazy_static = "1.4"

# Parking lot mutexes
parking_lot = "0.12"

[features]
default = ["download-binaries"]
download-binaries = ["sherpa-rs/download-binaries"]
cuda = ["kokoro-tiny/cuda", "parakeet-rs/cuda"]
directml = ["parakeet-rs/directml"]
