[package]
name = "supertonic"
version = "0.1.0"
edition = "2021"
description = "Supertonic TTS - Fast diffusion-based text-to-speech"

[dependencies]
# ONNX Runtime for neural network inference
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "cuda"] }

# N-dimensional arrays for tensor operations
ndarray = { version = "0.16", features = ["rayon"] }

# Random number generation for diffusion sampling
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.10"

# Audio file writing
hound = "3.5"

# FFT for audio processing
rustfft = "6.2"

# Serialization for voice style files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
unicode-normalization = "0.1"
regex = "1.10"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
