[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jack-voice-sdk"
version = "0.1.0"
description = "Minimal Python SDK for jack-voice bridge NDJSON RPC"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["jack_voice_sdk*"]
